--- a/LC1011.md
+++ b/LC1011.md
@@ -1,4 +1,5 @@
-## Brute-force solution: iteratve over the range: max weight in the array to summ of all the weights
+## Brute-force solution:
+iteratve over the range: max weight in the array to summ of all the weights
 
 ```js
 class Solution {
@@ -48,7 +49,8 @@ public:
 };
 ```
 
-## Binary Search: Instead of iterating over the entire range, realize that once you're finding out a solution, the other solutions greater than the sol are worthless. So, you can use binary search to find the solution
+## Binary Search:
+Instead of iterating over the entire range, realize that once you're finding out a solution, the other solutions greater than the sol are worthless. So, you can use binary search to find the solution
 
 ```js
 class Solution {
